testsuite/tests/typecheck/should_fail/T20260.hs
{-# LANGUAGE TypeFamilies, StandaloneKindSignatures #-}
module T20260 where

data Bar

type Foo :: *
type family Foo where
  Bar = ()
