testsuite/tests/typecheck/should_fail/T20260.stderr

T20260.hs:8:3: error:
    • Mismatched type name in type family instance.
        Expected: Foo
          Actual: Bar
    • In the type family declaration for ‘Foo’
